src/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: emojivoto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "hkb-trust-issuer"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;      
spec:
  tls:
    - hosts:
      - emojivoto.hbinsight.local
      secretName: emojivoto-hkb-crt
  rules:
  - host: emojivoto.hbinsight.local
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
